# sonne

./: .computare.json  .computare.yml  .gitignore  .gitmodules  .sonne.json  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  default_config.json  embed_config.py  postbuild_clean.py  prebuild_config.py
include/computare/: config.hpp  config_generator.hpp  counter.hpp  cxxopt.hpp  directory_counter.hpp  file.hpp  pch.hpp
include/sonne/: config.hpp  config_generator.hpp  counter.hpp  directory_counter.hpp  file.hpp  pch.hpp
source/: config.cpp  config_generator.cpp  counter.cpp  default_config.yml  directory_counter.cpp  file.cpp  main.cpp  pch.cpp  sonne.rc
src/: .computare.yml  config.cpp  config.hpp  counter.cpp  counter.hpp  cxxopt.hpp  default_config.yml  directory_counter.cpp  directory_counter.hpp  main.cpp  pch.hpp
tests/: main.cpp  test_config.json
tests/dir_walk/: first.txt  second.txt
tests/dir_walk/first_dir/: third.txt
tests/dir_walk/second_dir/: nester.txt
tests/dir_walk/second_dir/nest/: nest_text.txt
tests/ignore_test/: .sonne.json  afile.cpp  ignored.java  queen.py
tests/ignore_test/ignore/: shouldnotinclude.json  shouldntinclude.ini
tests/samples/: .computare.json  .computare.yml  .sonne.json  fun.java  ignore.cpp  test.cpp  test.hpp  test.java  test.js  test.lua  test.py  test.ts  test.txt
tests/samples/ignored_dir/: ignored.txt
tests/samples/nested/: test.json
tests/samples/python/: program.py
